Fixed Leftest Unscrollable Overflow Bug!!!!! -remove justfiy-center in imageSrcCropped.map then we good

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,8 @@
 .no-scrollbar::-webkit-scrollbar {
   display: none;
 }
+
+#modal > div > div {
+  margin-left: auto;
+  margin-right: auto;
+}
